smten/share/lib/Smten/Tests/ShouldFail/FreeVar.smtn

module Smten.Tests.ShouldFail.FreeVar where

-- The variable 'x' is not in scope.
bar :: Bool
bar = x

